--- a/style/style.css
+++ b/style/style.css
@@ -458,7 +458,7 @@ body {
   padding: 0.9rem;
   border: none;
   border-radius: 8px;
-  background: var(--warna-tiga);
+  background: var(--warna-empat);
   box-shadow: var(--warna-shadow) 1px 1px 5px;
   color: var(--warna-text);
   font-size: 1rem;
